<resources>
    <string name="app_name">TrashTIme</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_quiz">Teste</string>
    <string name="quiz_title">Que tipo de fã de série</string>
    <string name="quiz_label_name">Nome ao Contrário: </string>
    <string name="quiz_label_sleep">Qual o melhor lugar pra dormir enquanto assiste uma série?</string>
    <string name="quiz_sleep_option_bed">Cama</string>
    <string name="quiz_sleep_option_sofa">Sofá</string>
    <string name="quiz_sleep_option_office">Escritório</string>
    <string name="quiz_sleep_option_bus">Ônibus</string>
    <string name="quiz_label_food">Qual o melhor lanchinho para sua maratona?</string>
    <string name="quiz_food_popcorn">Pipoca</string>
    <string name="quiz_food_pizza">Pizza</string>
    <string name="quiz_food_lanch">Marmita</string>
    <string name="quiz_food_chocolate">Chocolate</string>
    <string name="quiz_food_caviar">Caviar</string>
    <string name="quiz_food_scoobySnack">Biscoitos Scooby</string>
    <string name="quiz_food_none">Nada pra mim, obrigado</string>
    <string name="quiz_food_fries">Batatinha</string>
    <string name="quiz_label_worst_final">Qual o pior final possivel para uma série ?</string>
    <string name="quiz_label_signo">Qual o seu Signo ?</string>
    <string name="quiz_label_cooker">Se você fosse um cozinheiro, qual seria sua especialização?</string>
    <string name="quiz_cooker_option_entrada">Entradas</string>
    <string name="quiz_cooker_option_churras">Churrasco</string>
    <string name="quiz_cooker_option_miojo">Viva o miojo</string>
    <string name="quiz_cooker_option_confeiteiro">Altos doces</string>
    <string name="quiz_cooker_option_se_acha">De tudo, Zik4 da cozinha</string>
    <string name="quiz_cooker_option_masterchef">Masterchef fi</string>
    <string name="quiz_cooker_option_nada">Como que liga o fogão ?</string>
    <string name="quiz_label_thanos">Você sobreviveria ao estalo do Thanos ? (Sim isso é importante)</string>
    <string name="quiz_thanos_option_yes">Sim</string>
    <string name="quiz_thanos_option_no">Não</string>
    <string name="quiz_thanos_option_who">Quem é Thanos</string>
    <string name="quiz_submit">Enviar</string>
    <string name="menu_series">Series</string>
    <string name="series_search_hint">Buscar ...</string>
    <string name="menu_tranding">Tendências</string>
    <string name="menu_search">Buscar</string>
    <string name="evalute_add_serie">Adicionar Serie</string>
    <string name="evalute_change_serie">Salvar Avaliação</string>
    <string name="evalute_remove_serie">Remover Serie</string>
    <string name="home_next_eps">Próximos Epsódios das suas Séries</string>
    <string name="home_populares">Populares ...</string>
    <string name="home_top_rated">Mais Bem Avaliadas ...</string>
    <string name="without_series_with_next_eps">NENHUMA SERIE COM PROXIMOS EPSODIOS ;-;</string>
</resources>
