<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_unknow"
            android:title="@string/menu_quiz" />
        <item
            android:id="@+id/nav_series"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_series" />

        <item
            android:id="@+id/nav_tranding"
            android:icon="@drawable/ic_tranding"
            android:title="@string/menu_tranding" />

    </group>
</menu>
