<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.unicamp.ft.d166336_m202618.trashtime.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="br.unicamp.ft.d166336_m202618.trashtime.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="br.unicamp.ft.d166336_m202618.trashtime.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="br.unicamp.ft.d166336_m202618.trashtime.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_quiz"
        android:name="br.unicamp.ft.d166336_m202618.trashtime.ui.quiz.QuizFragment"
        android:label="@string/menu_quiz"
        tools:layout="@layout/fragment_quiz" />
    <fragment
        android:id="@+id/result_fragment"
        android:name="br.unicamp.ft.d166336_m202618.trashtime.ui.quiz.ResultFragment"
        android:label="Resultado" />
    <fragment
        android:id="@+id/nav_series"
        android:name="br.unicamp.ft.d166336_m202618.trashtime.ui.list.SerieFragment"
        android:label="fragment_serie"
        tools:layout="@layout/fragment_serie" />
    <fragment
        android:id="@+id/nav_tranding"
        android:name="br.unicamp.ft.d166336_m202618.trashtime.ui.tranding.TrandingFragment"
        android:label="fragment_tranding"
        tools:layout="@layout/fragment_tranding" />
</navigation>